# WiChat

./: PRIVACY_POLICY.md  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opus_jni.cpp
app/src/main/java/com/wichat/android/: MainActivity.kt  MainViewModel.kt  WiChatApplication.kt
app/src/main/java/com/wichat/android/audio/: AudioEngine.kt  OpusCodec.kt  SimpleAudioRouter.kt  SoftwareEchoCanceler.kt
app/src/main/java/com/wichat/android/core/: BitchatServiceContainer.kt
app/src/main/java/com/wichat/android/crypto/: EncryptionService.kt
app/src/main/java/com/wichat/android/identity/: SecureIdentityStateManager.kt
app/src/main/java/com/wichat/android/model/: BitchatMessage.kt  DeliveryAck.kt  HandshakeRequest.kt  NoiseIdentityAnnouncement.kt  ReadReceipt.kt  RoutedPacket.kt  VoiceCallModels.kt
app/src/main/java/com/wichat/android/noise/: NoiseChannelEncryption.kt  NoiseEncryptionService.kt  NoiseSession.kt  NoiseSessionManager.kt
app/src/main/java/com/wichat/android/onboarding/: BatteryOptimizationManager.kt  BatteryOptimizationScreen.kt  BluetoothCheckScreen.kt  BluetoothStatusManager.kt  InitializingScreen.kt  LocationCheckScreen.kt  LocationStatusManager.kt  OnboardingCoordinator.kt  OnboardingState.kt  PermissionExplanationScreen.kt  PermissionManager.kt  WifiCheckScreen.kt  WifiStatusManager.kt
app/src/main/java/com/wichat/android/protocol/: BinaryProtocol.kt  CompressionUtil.kt  MessagePadding.kt
app/src/main/java/com/wichat/android/services/: BackgroundServiceConnector.kt  BitchatBackgroundService.kt  MessageRetentionService.kt
app/src/main/java/com/wichat/android/ui/: ChannelManager.kt  ChatHeader.kt  ChatScreen.kt  ChatState.kt  ChatUIUtils.kt  ChatViewModel.kt  ChatViewModelUtils.kt  CommandProcessor.kt  DataManager.kt  DialogComponents.kt  InputComponents.kt  MeshDelegateHandler.kt  MessageComponents.kt  MessageManager.kt  NotificationManager.kt  PrivateChatManager.kt  SidebarComponents.kt
app/src/main/res/values/: strings.xml  themes.xml
(+61 files in other folders)
